Update global css coding style and set new button on liicon module in licap page.

--- a/download.html
+++ b/download.html
@@ -28,7 +28,8 @@
             <p>Download</p>
         </section>
         <section id="download">
-            <input type="radio" name="software" id="software-liccon">
+			<p>Coming Soon...</p>
+            <!-- <input type="radio" name="software" id="software-liccon">
             <input type="radio" name="software" id="software-slimtab">
             <input type="radio" name="software" id="software-xxx">
             <div class="label-box">
@@ -46,7 +47,7 @@
                 <div id="block-xxx">
 
                 </div>
-            </div>
+            </div> -->
         </section>
     </main>
     <footer id="footer">
@@ -68,7 +69,7 @@
 			<div class="footer-series">
 				<p style="cursor:unset;">(+886)937-626-316</p>
 				<p style="cursor:unset;">contact<img class="email-at" src="image/icon/at.svg" alt="">thehcmusic.com</p>
-				<p style="cursor:unset;">10F., No. 6-1, Sec. 1, Mingde Rd., Tucheng Dist., <br>New Taipei City 236, Taiwan</p>
+				<p style="cursor:unset;">No. 3, Ln. 51, Chelutou St., Sanchong Dist., New Taipei City 241, Taiwan</p>
 			</div>
 		</div>
 		<div id="phone-footer-nav">
@@ -87,7 +88,7 @@
 			<div class="contact-block">
 				<p style="cursor:unset;">(+886)937-626-316</p>
 				<p>contact<img class="email-at" src="image/icon/at.svg" alt="">thehcmusic.com</p>
-				<p style="cursor:unset;">10F., No. 6-1, Sec. 1, Mingde Rd., Tucheng Dist., <br>New Taipei City 236, Taiwan</p>
+				<p style="cursor:unset;">No. 3, Ln. 51, Chelutou St., Sanchong Dist., <br>New Taipei City 241, Taiwan</p>
 			</div>
 		</div>
 		<p class="copyight">Copyright © 2019 HcMusic  CO. LTD. All Rights Reserved.</p>
