--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			<div class="contact-block">
 				<p style="cursor:unset;">(+886)937-626-316</p>
 				<p>contact<img class="email-at" src="image/icon/at.svg" alt="">thehcmusic.com</p>
-				<p style="cursor:unset;">10F., No. 6-1, Sec. 1, Mingde Rd., Tucheng Dist., <br>New Taipei City 236, Taiwan</p>
+				<p style="cursor:unset;">No. 3, Ln. 51, Chelutou St., Sanchong Dist., <br>New Taipei City 241, Taiwan</p>
 			</div>
 		</div>
 		<p class="copyight">Copyright © 2019 HcMusic  CO. LTD. All Rights Reserved.</p>
