--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 			<div class="footer-series">
 				<p style="cursor:unset;">(+886)937-626-316</p>
 				<p style="cursor:unset;">contact<img class="email-at" src="image/icon/at.svg" alt="">thehcmusic.com</p>
-				<p style="cursor:unset;">10F., No. 6-1, Sec. 1, Mingde Rd., Tucheng Dist., <br>New Taipei City 236, Taiwan</p>
+				<p style="cursor:unset;">No. 3, Ln. 51, Chelutou St., Sanchong Dist., <br>New Taipei City 241, Taiwan</p>
 			</div>
 		</div>
 		<div id="phone-footer-nav">
