--- a/licap.html
+++ b/licap.html
@@ -198,7 +198,7 @@
 	let licap = document.getElementById('nav-licap-label');
 	licap.classList.add("on-this-page")
 </script>
-<script src="https://threejs.org/build/three.min.js"></script>
+<script src="lib/three.min.js"></script>
 <script src="lib/STLLoader.js"></script>
 <script src="script/licapDisplay.js"></script>
 </html>
